mobile.css uploaded

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles.css" />
-    <!-- styles -->
+    <link rel="stylesheet" media="(max-width:500px)" href="mobile.css">
+   
   </head>
   <body>
     <h1 id="title">
